--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     },
     "homepage": "https://github.com/DavideCanton/npm-version-reader#readme",
     "dependencies": {
-        "npm": "^6.14.9",
-        "rimraf": "^3.0.2",
-        "tmp": "^0.2.1",
+        "lodash": "^4.17.20",
+        "node-fetch": "^2.6.1",
+        "semver": "7.3.2",
         "yargs": "^16.1.1"
     },
     "devDependencies": {
