--- a/package.json
+++ b/package.json
@@ -24,6 +24,14 @@
         "yargs": "^16.1.1"
     },
     "devDependencies": {
-        "@types/yargs": "^15.0.10"
+        "@types/yargs": "^15.0.10",
+        "eslint": "^7.14.0",
+        "eslint-config-google": "^0.14.0"
+    },
+    "prettier": {
+        "singleQuote": true,
+        "bracketSpacing": false,
+        "trailingComma": "all",
+        "tabWidth": 4
     }
 }
