--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -7,7 +7,8 @@ extends:
 parserOptions:
     ecmaVersion: 12
 rules:
-    max-len: 1
+    max-len: 0
     indent: ['error', 4]
     require-jsdoc: 0
     curly: 0
+    linebreak-style: ["error", "windows"]
