--- a/package.json
+++ b/package.json
@@ -12,26 +12,18 @@
     },
     "author": "",
     "license": "ISC",
-    "bin": "./index.js",
+    "main": "./index.cjs",
     "bugs": {
         "url": "https://github.com/DavideCanton/npm-version-reader/issues"
     },
     "homepage": "https://github.com/DavideCanton/npm-version-reader#readme",
     "dependencies": {
-        "lodash": "^4.17.20",
-        "node-fetch": "^2.6.1",
-        "semver": "7.3.2",
-        "yargs": "^16.1.1"
+        "lodash": "^4.17.21",
+        "node-fetch": "^2.7.0",
+        "semver": "7.6.0",
+        "yargs": "^17.7.2"
     },
     "devDependencies": {
-        "@types/yargs": "^15.0.10",
-        "eslint": "^7.14.0",
-        "eslint-config-google": "^0.14.0"
-    },
-    "prettier": {
-        "singleQuote": true,
-        "bracketSpacing": false,
-        "trailingComma": "all",
-        "tabWidth": 4
+        "@types/yargs": "^17.0.0"
     }
 }
